Moved theme switch inside title container and adjusted moveRandom() to avoid the object overlapping with title

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@
 
 .title {
     margin-left: 1rem;
+    width: fit-content;
+    height: fit-content;
 }
 
 .container1,
@@ -184,7 +186,6 @@
     display: inline-block;
     width: 2.5rem;
     height: 1.5rem;
-    margin-left: 50%;
 }
 
 /* Hide default HTML checkbox */
@@ -247,9 +248,9 @@ input:checked+.slider:before {
 }
 
 .dark-light-mode {
-    position: absolute;
+    /* position: absolute;
     top: 5%;
-    right: 5%;
+    right: 5%; */
     z-index: 50;
 }
 
